Add Theme button inside <li> when a new item is rendered.

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
           console.log(itemArray)
 
           const newItem = document.createElement('li');
-          newItem.innerHTML = "<span>" + 
-            `${inputTitle }` + "</span>" + "<br>" + 
+          newItem.innerHTML = "<button>" + `${theme}` + "</button>" + 
+            "<span>" + `${inputTitle }` + "</span>" + "<br>" + 
             "<p>" + `${inputBody}` + "</p>"; 
 
           items.appendChild(newItem);
