Add style to header.
This style is provisional, as is an inline style. It uses flex to
position name of the App and the darkMode button.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     
-  <header>
+  <header style="display: flex; justify-content: space-between">
+    <h3>Journal</h3>
     <button id="darkModeButton" onClick="changeMode()">Dark</button>
   </header>
   <div id="container">
