Add new style, change a letter

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <!-- This will expose saved entries-->
   <ul id="items">
-    <li>title <br> body</li>
+    <li>Title <br> body</li>
   </ul>
 
   <script>
