Add Font Awesome Kit, and app icon

--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Journal</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/ddfde4b284.js" crossorigin="anonymous"></script>
 </head>
 <body>
     
   <header style="display: flex; justify-content: space-between">
-    <h3>Journal</h3>
+    <h3>
+      <i class="fa-solid fa-square-pen fa-2x" 
+        style="color:#4E6B36;"></i>
+      Journal
+    </h3>
     <button id="darkModeButton" onClick="changeMode()">Dark</button>
   </header>
   <div id="container">
