--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Journal</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://kit.fontawesome.com/ddfde4b284.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/ddfde4b284.js" 
+      crossorigin="anonymous"></script>
 </head>
 <body>
     
@@ -16,7 +17,10 @@
         style="color:#4E6B36;"></i>
       Journal
     </h3>
-    <button id="darkModeButton" onClick="changeMode()">Dark</button>
+    <button id="darkModeButton" onClick="changeMode()">
+      <i class="fa-solid fa-moon fa-2x" ></i>
+      <!--Dark-->
+    </button>
   </header>
   <div id="container">
     <fieldset>
