Fix styles of header

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     
-  <header style="display: flex; justify-content: space-between">
-    <h3>
-      <i class="fa-solid fa-square-pen fa-2x" 
+  <header style="">
+    <h3 id="iconName">
+      <i class="fa-solid fa-square-pen fa-lg" 
         style="color:#4E6B36;"></i>
       Journal
     </h3>
